src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AIA_Account_Legal_Name__c</fullName>
        <formula>Account.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Email_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA_Email_RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloseProspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloseProspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <controllingField>Market_Segment_New__c</controllingField>
            <picklistValues>
                <fullName>51-199 New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-199 Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEHBP Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State &amp; Municipalities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Education/Par</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Accounts 1000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Account_Name_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Account Name Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Effective_Date__c</fullName>
        <label>Plan Year Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Contracts_new__c</fullName>
        <description>Returns the Potential contracts (old) value when the opportunity created date &lt; migration date (05/08/2013, 9 pm)
Returns the Estimated Actuals value when the opportunity created date &gt;= migration date (05/08/2013, 9 pm)</description>
        <formula>IF(
       (CreatedDate &lt;  DATETIMEVALUE(&quot;2013-05-08 21:00:00&quot;)),  Potential_Contracts__c ,   Estimated_Actuals__c )</formula>
        <label>Potential Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_RFP_Receipt_Date__c</fullName>
        <label>Potential RFP Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProspectingCloseDate__c</fullName>
        <label>ProspectingCloseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProspectingDate__c</fullName>
        <description>This field captures the date and time of the prospecting opportunities</description>
        <inlineHelpText>This field is populated with date automatically when the stage is Prospecting</inlineHelpText>
        <label>ProspectingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProspectingDays__c</fullName>
        <description>This field populates number of days opportunity is in prospecting stage</description>
        <formula>IF(!ISPICKVAL(StageName, &apos;Prospecting&apos;),Null,IF(AND(ISPICKVAL(StageName, &apos;Prospecting&apos;),IF( !CloseProspect__c ,true,false)),NOW() - ProspectingDate__c,IF(AND(ISPICKVAL(StageName, &apos;Prospecting&apos;),IF( CloseProspect__c ,true,false)),ProspectingCloseDate__c - ProspectingDate__c,Null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field populates number of days opportunity is in prospecting stage before closing</inlineHelpText>
        <label>ProspectingDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Underwriting_Entity__c</fullName>
        <description>Where Underwriting is performed.  Usually the location of the company headquarters.</description>
        <label>Underwriting Entity</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>CFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>AIA_200</fullName>
        <active>true</active>
        <businessProcess>AIA Large Group Sales Process</businessProcess>
        <description>200+ Opportunity Record Type</description>
        <label>200+</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospecting</fullName>
        <active>true</active>
        <businessProcess>ProspectingSalesProcess</businessProcess>
        <description>Prospecting Opportunity Record Type</description>
        <label>Prospecting</label>
    </recordTypes>
    <validationRules>
        <fullName>EOPP070</fullName>
        <active>true</active>
        <description>EOPP070: Account Legal Name = null and Account Legal Name Verified = true, then User cannot save the record</description>
        <errorConditionFormula>AND( ISBLANK( Account.Account_Legal_Name__c ) , Legal_Account_Name_Verified__c == true)</errorConditionFormula>
        <errorMessage>EOPP070:Cannot Verify Account Legal Name</errorMessage>
    </validationRules>
</CustomObject>